# brain_games_rust

./: .gitignore  Cargo.toml  LICENSE  README.md
releases/linux/: brain_games
src/: common_funcs.rs  main.rs
src/games/: brain_calc.rs  brain_even.rs  brain_gcd.rs  brain_prime.rs  brain_progression.rs
