[package]
name = "brain_games"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inline_colorization = "0.1.6"
rand = { version = "0.8.5", features = [] }

#[target.x86_64-pc-windows-gnu]
#linker = "x86_64-w64-mingw32-gcc"
#ar = "x86_64-w64-mingw32-ar"
